[tool.poetry]
authors = ["g3onho<gunho1604@gmail.com"]
name = "traffic-weak-notice"
version = "0.1.0"
description = "A traffic weak zone notification program using Python."
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.15"
opencv-contrib-python = "4.10.0.84"
numpy = "2.1.3"
PyQt5 = "5.15.9"
winsound; platform_system == 'Windows'

[build-system]
requires = ["setuptools>=42", "wheel", "PyQt5", "opencv-python", "numpy"]
build-backend = "setuptools.build_meta"